syntax = "proto3";

package api;

message SumRequest {
    int32 X = 1;
    int32 Y = 2;
}

message SumResponse {
    int32 Result = 1;
}

message FibonacciRequest {
    int64 Number = 1;
}

message FibonacciResponse {
    int64 Number = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc Fibonacci(FibonacciRequest) returns (stream FibonacciResponse) {}
}